# DRRR-Addons-Manager

./: .gitignore  LICENSE  README.md  addons-manager.py  build.py  manager.py  pyproject.toml
code/: addons-manager.py  file_utils.py  game.py  github_utils.py  sanghelyos-toolbox.py
game_dev_directory/: ringprofiles.prf
game_dev_directory/addons/: DC_Ash_Pikachu_V1.pk3
