[project]
name = "DRRR-Toolbox"
version = "1.3"
description = "Ring Racers/SRB2Kart Toolbox"
authors = [
    { name="Sanghelyos", url="https://github.com/Sanghelyos" }
]

requires-python = ">=3.10.5"

dependencies = [
    "pyinstaller==6.15.0",
    "pefile==2022.5.30"
    "requests==2.28.2",
]
